--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,44 +5,33 @@
     <link rel='stylesheet' href='/stylesheets/loginstyle.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="/js/ajax.js"></script>
-    <script type="text/javascript">
-<!--
-    	function toggle_visibility(id) {
-       		var e = document.getElementById(id);
-       		if(e.style.display == 'block')
-          		e.style.display = 'none';
-       		else
-          		e.style.display = 'block';
-    		}
-//-->
-	</script>
    
   </head>
 
 
 	<body> 
-		<div id= 'nav'>
-    	<a href="/home">
+<!-- 		<div id= 'nav'> -->
+<!--     	<a href="/home">
         <img id="logo" src="/images/beaverlogo.png" alt="HTML tutorial" style="position:relative; top:20px; width:90px;height:90px;border:0;">
-      	</a>
+      	</a> -->
 
 
-      	<a href = '/signup'>
+<!--       	<a href = '/signup'>
       		<button class = 'button2' type = 'signup'>Sign up!</button>
       	</a>
-
-
+ -->
+<!-- 
       	<h1 class = 'welcome' style = 'font-size:40pt;position:relative;top:30px;left:20px'> Welcome to MIT Free &amp; For Sale! </h1>
       	<h2 style = 'font-size: 16pt; position:relative;top:15px;left:20px' class = 'subheading'> A site to buy, sell, trade, or just give away items created by MIT students for MIT students 
-    	</div>
-
+    	</div> -->
+<!-- 
     	<div style = 'position:relative; top:140px' id = 'subheader'>
 		
 		<img id="logo2" src="/images/beaverlogo.png" alt="HTML tutorial">
 		</h2>
-		</div>
+		</div> -->
 		
-		<div style = 'position:relative; top:60px' class = 'login'>
+<!-- 		<div style = 'position:relative; top:60px' class = 'login'> -->
 
 
 		 	<form name="sign in" method = 'post' action = '/login'>
@@ -58,8 +47,8 @@
 		 			<li><button class="button" type = 'submit'>Login</button></li>
 		 		</ul>
 		 	</form>
-
-		 </div>
+<!-- 
+		 </div> -->
 	</body>
 </html>
 
