--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -16,7 +16,7 @@
     {{#if boolean}}
   <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #47474C;">
 
-    <a class="navbar-brand navbar nav" href="/"</a>
+    <a class="navbar-brand navbar nav" href="/home"</a>
       <img src="/images/webbeaver.png" width="90" height="40" class="d-inline-block" alt="">
 
     </a>
@@ -42,6 +42,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/starreditems">Starred Items</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/manageitems">Manage Items</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/profile">Profile</a>
@@ -78,18 +81,105 @@
     <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
   </form> 
 
-            <ul class="nav navbar-nav navbar-right">
+  <ul class="nav navbar-nav navbar-right">
 
-              <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/signup">Sign Up</a>
-              </li>
+    <!-- ******** LOGIN ********  -->
+    <li class="nav-item">
+      <!-- Trigger the modal with a button -->
+      <a data-toggle="modal" data-target="#login">Login</a>
 
-            </ul>
+      <!-- Modal -->
+      <div class="modal fade" id="login" role="dialog">
+        <div class="modal-dialog">
+        
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Login</h4>
+            </div>
+            <div class="modal-body">
+              <form name="sign in" method = 'post' action = '/login'>
+                <ul>
+                  <li style = 'position:relative; right: 110px;font-size:17pt''> Email: </li>
+                  <li> <input style = 'height: 50px; font-size:20pt' type = 'text' placeholder = 'email' name = 'username'> </li>
+
+
+                  <li style = 'position:relative; right: 88px;font-size:17pt''> Password: </li>
+
+                  <li> <input style = 'height: 50px; font-size:20pt;' type = 'password' placeholder= 'password' name = 'password'> </li>
+
+                  <li><button class="button" type = 'submit'>Login</button></li>
+                </ul>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
           </div>
-        </nav>
+          
+        </div>
+      </div>
+    </li>
+
+    <!-- ******** SIGN UP ********  -->
+
+    <li class="nav-item">
+      <!-- Trigger the modal with a button -->
+      <a data-toggle="modal" data-target="#signup">Sign Up</a>
+
+      <!-- Modal -->
+      <div class="modal fade" id="signup" role="dialog">
+        <div class="modal-dialog">
+        
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Sign Up</h4>
+            </div>
+            <div class="modal-body">
+              <form name="signup" method="post" action="/signup">
+                <ul>
+                  <li>First name</li>
+
+                  <li><input type="text" placeholder="First name" name="firstname" required></li>
+
+                  <li>Last name</li>
+
+                  <li><input type="text" placeholder="First name" name="lastname" required></li>
+
+                  <li>Venmo</li>
+
+                  <li><input type="text" placeholder="Venmo" name="venmo"></li>
+
+                  <li>Email</li>
+
+
+                  <li><input type="email" placeholder="Email" name="username" required></li>
+
+                  <li>Password</li>
+
+                  <li><input type="password" placeholder="Password" name="password" required></li>
+
+                  <li> <input type='password' placeholder ="Confirm Password" id = 'password' required></li>
+                  <script src="/scripts/confirmpass.js"></script>
+                  <li><button type="submit">Sign Up</button>
+                </ul>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </li>
+
+  </ul>
+</div>
+</nav>
 
 
    
