--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -317,6 +317,12 @@ p{
   padding: 7px;
   
 }
+
+#profpic{
+  max-width: 300px;
+  max-height: 300px;
+}
+
 #categories{
   line-height: 24px;
   background-color: #F3F3F3;
