--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,6 +10,8 @@
   <body>
     {{> navbar}}
 
+    {{> navbarcat}}
+
     <div id="content">
       <h1 id="title">Welcome to Free &amp; For Sale! </h1>
       <div id="testp">
