--- a/views/slashscreen.hbs
+++ b/views/slashscreen.hbs
@@ -91,6 +91,7 @@ body, html {
     </head>
 <body>
     {{> navbar }}
+    {{> navcat }}
 <body>
 <img src="/images/pretty.png"  id="mains">
     <div id="center-divs">
