--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -36,7 +36,7 @@
     </div>
     <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
   </form> 
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right original">
           <li class="nav-item">
             <a class="nav-link" href="/newitem">List an Item</a>
           </li>
@@ -78,7 +78,7 @@
     <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
   </form> 
 
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right original">
 
               <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
