--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -82,7 +82,7 @@
   </form> 
 
 
-  <ul class="nav navbar-nav navbar-right">
+  <ul class="nav navbar-nav navbar-right original">
 
     <!-- ******** LOGIN ********  -->
     <li class="nav-item">
