--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -10,6 +10,41 @@
    
   </head>
 
+  <div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-4 well well-sm">
+            <legend><a href="/signup"><i class="glyphicon glyphicon-globe"></i></a> Sign up!</legend>
+            <form action="#" method="post" class="form" role="form">
+            <div class="row">
+                <div class="col-xs-6 col-md-6">
+                    <input class="form-control" name="firstname" placeholder="firstname" type="text"
+                        required autofocus />
+                </div>
+                <div class="col-xs-6 col-md-6">
+                    <input class="form-control" name="lastname" placeholder="lastname" type="text" required />
+                </div>
+            </div>
+            <input class="form-control" name="venmo" placeholder="venmo" type="text" />
+            <input class="form-control" name="username" placeholder="email" type="email" />
+            <input class="form-control" name="password" placeholder="password" type="password" />
+            <br />
+            <br />
+            <button class="btn btn-lg btn-primary btn-block" type="submit">
+                Sign up</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+<!-- 
+
+
   <body>
     <h1 name="Sign-Up"></h1>
     <div name="content">
@@ -48,7 +83,7 @@
 
 
 <!--       <a href="/userlist">See userlist</a> -->
-    </div>
+ <!--    </div>
 
-  </body>
+  </body> --> -->
 </html>
