--- a/views/slashscreen.hbs
+++ b/views/slashscreen.hbs
@@ -91,7 +91,7 @@ body, html {
     </head>
 <body>
     {{> navbar }}
-    {{> navcat }}
+    {{> navbarcat }}
 <body>
 <img src="/images/pretty.png"  id="mains">
     <div id="center-divs">
