--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>profile</title>
+    <title>{{profilefirstname}} {{profilelastname}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
 
