--- a/views/slashscreen.hbs
+++ b/views/slashscreen.hbs
@@ -86,12 +86,13 @@ body, html {
 <!DOCTYPE html>
 <html>
     <head>
-        <title>/</title>
+        <title>beaver++</title>
         <link rel="stylesheet" href='/stylesheets/slashscreen.css'>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     </head>
-<body>
+
     {{> navbar }}
-    {{> navbarcat }}
 <body>
 <img src="/images/pretty.png"  id="mains">
     <div id="center-divs">
