--- a/views/deletesuccess.hbs
+++ b/views/deletesuccess.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>success</title>
+    <title>Success</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
 
