--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Home</title>
+    <title>beaver++</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <!-- <link rel="stylesheet" href='/stylesheets/slashscreen.css'> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel='shortcut icon' type='image/png' href='/images/modifiedbeaver.png' />
   </head>
@@ -10,7 +11,7 @@
   <body>
     {{> navbar}}
 
-    {{> navbarcat}}
+<!--     {{> navbarcat}} -->
 
     <div id="content">
       <h1 id="title">Welcome to Free &amp; For Sale! </h1>
