--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/stylesheets/style.css">
-  <link rel='stylesheet' href='/stylesheets/loginstyle.css' />
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <!-- <link rel='stylesheet' href='/stylesheets/loginstyle.css' /> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
 
@@ -77,20 +72,38 @@
               </div>
             </div>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="/starreditems">Starred Items</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/manageitems">Manage Items</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/profile">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
+            <div class="dropdown">
+              <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Welcome, {{firstname}}!
+              <span class="caret"></span></button>
+              <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                <li role="presentation"><a class="nav-link" href="/starreditems">Starred Items</a></li>
+                <li role="presentation"><a class="nav-link" href="/profile">Profile</a></li>
+                <li role="presentation"><a class="nav-link" href="/manageitems">Manage Items</a></li>
+                <li role="presentation" class="divider"></li>
+                <li role="presentation"><a class="nav-link" href="/logout">Logout</a></li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
+      <div class="collapse navbar-collapse navHeaderCollapse textin">
+          <ul class="nav navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/clothes">Clothes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/books">Books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/tech">Tech</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/furniture">Furniture</a>
+          </li>
+        </ul>
+        </div>
     </nav>
 
   {{else}}
@@ -217,8 +230,11 @@
     </li>
 
   </ul>
+
 </div>
+
 </nav>
+
 
 
    
