--- a/views/partials/navbarcat.hbs
+++ b/views/partials/navbarcat.hbs
@@ -1,37 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link rel='stylesheet' href='/stylesheets/loginstyle.css' />
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 
 <nav class="navbar navbar-inverse navbar-fixed-top categories" style="background-color: #D7D7E2;">
-    <button class = 'navbar-toggle' data-toggle = 'collapse' data-target = '.navHeaderCollapse'>
-      <span class = 'icon-bar'></span>
-      <span class = 'icon-bar'></span>
-      <span class = 'icon-bar'></span>
-    </button>
+ <!--  <button class = 'navbar-toggle' data-toggle = 'collapse' data-target = '.navHeaderCollapse'>
+    <span class = 'icon-bar'></span>
+    <span class = 'icon-bar'></span>
+    <span class = 'icon-bar'></span>
+  </button> -->
 
-    <div class="collapse navbar-collapse navHeaderCollapse textin">
+  <div class="collapse navbar-collapse navHeaderCollapse textin">
 
-        <ul class="nav navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/clothes">Clothes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/books">Books</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/tech">Tech</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/furniture">Furniture</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <ul class="nav navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/clothes">Clothes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/books">Books</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/tech">Tech</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/furniture">Furniture</a>
+      </li>
+    </ul>
+  </div>
+</nav>
