--- a/views/searchresults.hbs
+++ b/views/searchresults.hbs
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <title>Search Results</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
 
