--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,8 +9,8 @@
 
   <body>
     {{> navbar}}
-
-    {{> navbarcat}}
+<!-- 
+    {{> navbarcat}} -->
 
     <div id="content">
       <h1 id="title">Welcome to Free &amp; For Sale! </h1>
