--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -53,6 +53,23 @@
             <a class="nav-link" href="/logout">Logout</a>
           </li>
         </ul>
+        <div class="collapse navbar-collapse navHeaderCollapse textin">
+
+        <ul class="nav navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/clothes">Clothes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/books">Books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/tech">Tech</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/furniture">Furniture</a>
+          </li>
+        </ul>
+      </div>
       </div>
     </nav>
 
