--- a/public/stylesheets/slashscreen.css
+++ b/public/stylesheets/slashscreen.css
@@ -1,41 +1,26 @@
-/*
 
 
-#logo{
-    margin: 15% 0;
-    position: center;  
-}
-#
-
-/*h1 {
-    text-align:center;
-    color: black;
-    letter-spacing: 1%;
-    text-transform: uppercase;
+html, body {
+  height: 100%;
+width: 100%;
 }
 
-h2 {
-    text-align:center;
-    color: black;
-    letter-spacing: 1%;
-    text-transform: uppercase;
-}*/
 
-body {
-    margin: 0;
-}
+#home {
+  background-image: lightblue no-repeat center center fixed;
+  display: table;
+  height: 100%;
+  position: relative;
+  width: 100%;
+/*-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;*/
+  background-size: cover;
 
-#mains {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
 }
 
 #center-divs {
 
-    position: absolute;
     width: 700px;
     height: 350px;
     top: 50%;
@@ -45,7 +30,7 @@ body {
 }
 
 #logos {
-    position: absolute;
+
     height: 400px;
     width: 800px;
     left: 15%;
@@ -54,7 +39,6 @@ body {
 }
 
 #searchbox {
-    position: absolute;
     width: 400px;
     height: 25px;
     top: 190px;
@@ -62,6 +46,14 @@ body {
     font-family: sans-serif;
     font-size: 20px;
     margin-left: 165px;
+}
+
+.search{
+
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    border: none;
 }
 
 .twobuttons {
@@ -79,103 +71,6 @@ body {
 
 }
 
-/*#nav {
-  position: fixed;
-  background-color: #999898;
-  width: 100%;
-  border-bottom: solid 1px #ccc;
-  margin-top: -10px;
-  margin-left: -10px;
-}
-*/
-
-
-
-/*.navbutton {
-  float: right;
-  margin-right: 45px;
-  margin-top: 15px;
-  font-family: ralewayMed;
-    padding: 0;
-    border: none;
-    background: none;*/
-
-/*  border: none;
-  border-bottom: solid 5px #878787;
-  border-right: solid 5px #878787;*/
-/*}*/
-
-.navbutton {
-  float: right;
-  margin-right: 45px;
-  margin-top: 20px;
-  font-family: ralewayMed;
-  padding: 0;
-  border: none;
-  background: none;
-  margin-left: 165;
-}
-
-.droppedbtn{
-  float: right;
-  margin-right: 0px;
-  margin-top: px;
-  font-family: ralewayMed;
-  font-size: 15px;
-  padding: 26px;
-  border: none;
-  background: none;
-}
-
-.droppedbtn:hover {
-  background-color: #727272; 
-
-.navbutton:active {
-  border: none;
-}
-
-.navbutton:focus {
-  outline: 0;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 100px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-.show {display:block;}
-
-.dropdown{
-  float: right;
-  margin-right: 25px;
-  margin-top: 25px;
-  font-family: ralewayMed;
-}
-.dropbtn {
-  padding: 7px;
-  background-color: #D3D3D3;
-  border-radius: 15px;
-  border: none;
-  border-bottom: solid 5px #878787;
-  border-right: solid 5px #878787;
-}
-.dropbtn:active {
-  border: none;
-}
-.dropbtn:focus {
-  outline: 0;
-}
-.droppedbtn{
-  background-color: #D3D3D3;
-  margin: 7px;
-  display: block;
-  padding: 4px;
-}
-
-
-
 .container {
     width: 100%;
     height: 0px;
@@ -186,29 +81,4 @@ body {
 }
 
 
-.search{
 
-    height: 100%;
-    background-position: center;
-    background-size: cover;
-    border: none;
-
-
-}
-/*--- Start PARALLAX ---*/
-
-.parallax {
-    /* The image used */
-    background-image: url('/images/webdev.jpg');
-
-    /* Full height */
-    height: 100%; 
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: none;
-
-}
