--- a/views/slashscreen.hbs
+++ b/views/slashscreen.hbs
@@ -34,14 +34,11 @@
 <!-- second section - About -->
 <div id="about" class="pad-section">
     <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-            </div>
-            <div class="col-sm-6 text-center">
-                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet.</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum metus et ligula venenatis, at rhoncus nisi molestie. Pellentesque porttitor elit suscipit massa laoreet metus.</p>
-            </div>
-        </div>
+        
+            <h1 id = 'welcome'>
+                A site to buy, sell, trade, or just give away items created by MIT students for MIT students!
+            </h1>
+       
     </div>
 </div>
 
