--- a/public/stylesheets/slashscreen.css
+++ b/public/stylesheets/slashscreen.css
@@ -7,9 +7,9 @@ width: 100%;
 
 
 #home {
-  background-image: lightblue no-repeat center center fixed;
+  background: url(../images/pretty.png) no-repeat center center fixed;
   display: table;
-  height: 100%;
+  height: 104%;
   position: relative;
   width: 100%;
 /*-webkit-background-size: cover;
@@ -17,6 +17,11 @@ width: 100%;
 -o-background-size: cover;*/
   background-size: cover;
 
+}
+
+#about{
+  height: 83.5%;
+  width: 100%;
 }
 
 #center-divs {
@@ -28,6 +33,11 @@ width: 100%;
     left: 50%;
     margin-left: -375px;
 }
+
+#welcome{
+  padding: 175px;
+}
+
 
 #logos {
 
