all emails link to sending an email

--- a/views/partials/starred_item_partial.hbs
+++ b/views/partials/starred_item_partial.hbs
@@ -25,7 +25,7 @@
           {{description}}
           <img src="/uploads/{{picture}}" />
           <br><br>
-          posted by <a href='/profile/{{userid}}'> {{firstname}} {{lastname}} </a><br> ({{user}})
+          posted by <a href='/profile/{{userid}}'> {{firstname}} {{lastname}} </a><br><a href= 'mailto:{{user}}'> ({{user}})</a>
         </div>
 
         <div style="display:none" class='id' id="{{id}}"></div>
