--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -11,7 +11,9 @@
       <h1> {{profilefirstname}} {{profilelastname}} </h1>
       <ul style="list-style: none">
         <li>Venmo: {{venmo}}</li>
-        <li>Email: {{email}}</li>
+        <li>
+        <a href = 'mailto:{{email}}'> Email: {{email}} </a>
+        </li>
         <img id = 'profpic' src="/uploads/{{profpic}}" />
       </ul>
       <h1> {{profilefirstname}}&#39;s items</h1>
