changes to index

--- a/views/slashscreen.hbs
+++ b/views/slashscreen.hbs
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>beaver++</title>
-        <link rel="stylesheet" href='/stylesheets/slashscreen.css'>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet" />
+        <link rel="stylesheet" href='/stylesheets/slashscreen.css'>
 
     </head>
 <body>
@@ -22,12 +22,13 @@
 <!--First Page-->
 <div id="home" class="home">
     <div id="center-divs">
-        <img src="/images/webbeaver.png" id="logos" />
+        <img src="/images/webbeaver-newfont.png" id="logos" />
         <form id="search" method='post' action="/searchresults">
-            <input class="inputbox" id="searchbox" type="text"  placeholder="find items" name="term">
+            <input class="inputbox" id="searchbox" type="text"  placeholder="what are you looking for?" name="term">
             <input class="twobuttons" id="go" type="submit" value="+ +" style="left: 300px;">
         </form>
     </div>
+
 </div>
 
 
@@ -36,7 +37,7 @@
     <div class="container">
         
             <h1 id = 'welcome'>
-                A site to buy, sell, trade, or just give away items created by MIT students for MIT students!
+                A site to buy, sell, trade, or just give away items - created by MIT students for MIT students!
             </h1>
        
     </div>
